--- a/Landing1/index.html
+++ b/Landing1/index.html
@@ -34,7 +34,7 @@
         id="navbar"
       >
         <div class="container py-3">
-          <a href="#" class="navbar-brand primary-color">
+          <a href="#" class="navbar-brand">
             <img src="./images/imovi-icon.png" alt="Logo iMovi" />
             <span>iMovi</span>
           </a>
@@ -84,32 +84,74 @@
 
     <section>
       <div class="container" id="slider-container">
-        <div class="carousel slider" id="slider" data-bs-ride="carousel">
+        <div id="slider" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button
               type="button"
-              class="active"
-              dara-bs-target="#slider"
+              data-bs-target="#slider"
               data-bs-slide-to="0"
+              class="active"
               aria-current="true"
-              aria-label="slide 1"
+              aria-label="Slide 1"
             ></button>
             <button
               type="button"
-              dara-bs-target="#slider"
+              data-bs-target="#slider"
               data-bs-slide-to="1"
-              aria-label="slide 2"
+              aria-label="Slide 2"
             ></button>
             <button
               type="button"
-              dara-bs-target="#slider"
+              data-bs-target="#slider"
               data-bs-slide-to="2"
-              aria-label="slide 3"
+              aria-label="Slide 3"
             ></button>
           </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/banner-1.jpg" class="d-block w-100" alt="Casa 1" />
+              <div class="carousel-caption">
+                <h5>Casas planificadas</h5>
+                <a href="#" class="btn btn-dark">Ver Projeto</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/banner-2.jpg" class="d-block w-100" alt="Casa 2" />
+              <div class="carousel-caption">
+                <h5>Projyectos completos</h5>
+                <a href="#" class="btn btn-dark">Ver Projeto</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/banner-3.jpg" class="d-block w-100" alt="Casa 3" />
+              <div class="carousel-caption">
+                <h5>Proyetos Innovadores</h5>
+                <a href="#" class="btn btn-dark">Ver Proyectso</a>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#slider"
+            data-bs-slide="prev"
+          >
+            <i class="bi bi-chevron-compact-left"></i>
+            <span class="visually-hidden">Atrás</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#slider"
+            data-bs-slide="next"
+          >
+            <i class="bi bi-chevron-compact-right"></i>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
         </div>
-      </div>
-    </section>
+      </section>
+
+        
 
     <!-- JavaScript Bundle with Popper -->
     <script
@@ -119,3 +161,5 @@
     ></script>
   </body>
 </html>
+
+<!--38:21-->
